Liberty: Fix MediaWiki 1.39 compatibility and header overlapping
* Add class aliases for MediaWiki\Html\Html and MediaWiki\Linker\Linker
  in LibertyTemplate.php. These namespaces were introduced in newer
  MediaWiki versions (1.40+), causing fatal errors on MediaWiki 1.39.
* Fix header overlapping issue by increasing the margin-top of
  .Liberty .content-wrapper from 3.33rem to 4.8rem in default.css.
  This ensures the fixed navbar does not obscure the page content.

--- a/css/default.css
+++ b/css/default.css
@@ -477,7 +477,7 @@ strike {
 
 /* Content */
 .Liberty .content-wrapper {
-	margin-top: 3.33rem;
+	margin-top: 4.8rem;
 	z-index: -1;
 }
 
